--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=sk-<your-api-key-here>
